--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <h1 class="title">Press Start To Drink</h1>
                 <nav>
                     <ul class = "main_nav">
-                        <li><a href="home.html"> Home </a></li>
+                        <li><a href="index.html"> Home </a></li>
                         <li><a href="games.html"> Our Games </a></li>
                         <li><a href="http://www.youtube.com/c/PressStarttoDrink"> Our Channel </a></li>
                     </ul>
