small change to footer

--- a/games.html
+++ b/games.html
@@ -384,8 +384,9 @@
         </div>
     </div>
     
-    <footer id="footer">
-        <h4>Follow Our Social Media!</h4>
+     <footer id="footer">
+        <h4>Follow Our Social Media</h4>
+        <p>Stay up to date on what is coming out next!</p>
         <nav>
             <ul class = "footer_nav">
                 <li><a class="footer_link" href="https://www.instagram.com/pressstarttodrink/" target="_blank"> <img class="link_img" src="insta.png"><div class="link_titles">Instagram</div></a></li>
